fixes evening overflow+footer

--- a/src/sass/footer.sass
+++ b/src/sass/footer.sass
@@ -17,7 +17,7 @@ footer
     margin-right: 5%
 .footer__buttons
     display: flex
-    margin-right: 5%
+    margin-right: 16px
 .footer__left-descr
     margin-top: 32px
 .footer__link > a
