--- a/src/sass/home.sass
+++ b/src/sass/home.sass
@@ -180,6 +180,7 @@
 .connect__blocks
     display: flex
     justify-content: space-evenly
+    overflow-y: hidden
 .connect__header > h2
     text-align: center
     margin-bottom: 6%
