--- a/src/sass/mobile.sass
+++ b/src/sass/mobile.sass
@@ -309,7 +309,7 @@ $laptops: 1024px
     .footer__logo
         margin-right: 3%
     .footer__buttons
-        margin-right: 4%
+        margin-right: 16px
     .footer_qr
         display: none
     footer
